# MyDiscord

./: .gitignore  CMakeLists.txt  README.md  client.c  cmakelists.txt  encrypt_decrypt.h  main.c  main_encrypt.c  mydiscord_dump.sql  role.h  server.c  style.css
CLIENT/includes/: config.h
CLIENT/includes/callbacks/: CreateAccountCallbacks.h  GuiCallbacks.h  LoginCallbacks.h
CLIENT/includes/graphics/login/: UiCreateAccount.h  UiForgotPassword.h  UiLogin.h
CLIENT/includes/graphics/mainapp/: UiChannelList.h  UiCreateCategory.h  UiCreateParameters.h  UiCreateServer.h  UiMainContent.h  UiMessageList.h  UiNetwork.h
CLIENT/includes/graphics/utils/: AppData.h  BottomBar.h  TopBar.h  (+3 more)
CLIENT/source/: Main.c  config.c
CLIENT/source/callbacks/: CreateAccountCallbacks.c  GuiCallbacks.c  LoginCallbacks.c
SERVER/includes/: ServerConfig.h
SERVER/includes/serverdatabase/: ServerDatabase.h
SERVER/includes/serverlogging/: ServerLogging.h
SERVER/includes/servermetrics/: ServerMetrics.h
SERVER/includes/servernetwork/: ServerSession.h  messageHandler.h  serverFuncs.h
SERVER/includes/serversecurity/: ServerSecurity.h  hash.h
SERVER/source/: ServerConfig.c
SERVER/source/serverdatabase/: ServerDatabase.c
SERVER/source/serverlogging/: ServerLogging.c
SERVER/source/servermetrics/: ServerMetrics.c
SERVER/source/servernetwork/: ServerSession.c  messageHandler.c  serverFuncs.c  serverMain.c
SERVER/source/serversecurity/: hash.c
UTILS/includes/security/: NetworkSecurity.h  encrypt_decrypt.h
UTILS/includes/utilsnetwork/: Message.h  NetworkConstants.h  NetworkEnums.h  NetworkTypes.h  networkFuncs.h
UTILS/source/security/: NetworkSecurity.c  encrypt_decrypt.c
UTILS/source/utilsnetwork/: networkFuncs.c
UserAuthentification/: ForgotPasswordProcess.c  HashPasswordProcess.c  LoginProcess.c  RegistrationProcess.c
client/: client.c  client.h
clientSide/model/encryption/: encrypt_decrypt.c
clientSide/view/source/: CssLoading.c  UiCreateAccount.c  UiForgotPassword.c  UiMainContent.c
database/: database.c
encryption/: encrypt_decrypt.c  encrypt_decrypt.h  main_encrypt.c
includes/: DisplayPage.h  ForgotPasswordProcess.h  HashPassword.h  LoginProcess.h  RegistrationProcess.h  UiChannelList.h  UiCreateServer.h  UiForgotEmail.h  UiLogin.h  UiMessageList.h  UiNetwork.h  UiNotification.h  UiUserContent.h  config.h  database.h
moderation/: README.md  main_role.c  role.c
network/: networkFuncs.c  networkFuncs.h
network/client/C/: clientFuncs.c  clientMain.c
network/server/C/: serverFuncs.c  serverMain.c
network/server/H/: serverFuncs.h
server/: auth.c  auth.h  database.c  database.h  server.c  server.h
server/C/: serverFuncs.c  serverMain.c
server/H/: serverFuncs.h
serverSide/server/C/: serverFuncs.c
serverSide/server/H/: serverFuncs.h
source/: AppData.c  BottomBar.c  DisplayPage.c  Main.c  UiChannelList.c  UiCreateAccount.c  UiCreateServer.c  UiForgotEmail.c  UiForgotPassword.c  UiLogin.c  UiMainContent.c  UiMessageList.c  UiNetwork.c  UiNotification.c  UiUserContent.c  ValidationProcess.c
source/Logic/Login/: ValidationProcess.c
utils/: .env  envtest.c  load_env.c  load_env.h
utils/network/: networkFuncs.h
(+52 files in other folders)
